# cado-nfs

./: .mailmap  AUTHORS  CMakeLists.txt  COPYING  Makefile  Makefile.all  Makefile.common  Makefile.local.Macintosh.home  Makefile.local.crumble  Makefile.local.example  Makefile.local.macos  Makefile.tifa-support  NEWS  NEWS_1.1  README  README.Python  README.cmake  README.discretelog  README.dlp  README.dlp.nonlinear  README.ffs  README.macro_usage  README.msieve  README.nfs-hd  README.nonlinear  README.param_list  README.params  TODO  TODO_BEFORE_RELEASE_2.2  Toolchain-MinGW64.cmake  WhoDunit  bench-smallsieve.cpp  builddist.manu  cado-nfs-client.py  cado-nfs.py  cado-nfs.supp  cado.h  cado_config_h.in  cado_mpi_config_h.in  cadofactor.pl  (+50 more)
filter/: CMakeLists-nodist.txt  CMakeLists.txt  README.fileformat  clique_removal.c  clique_removal.cpp  clique_removal.h  dclist.c  debug-tools.sh  debug.c  debug.h  dup1.c  dup2.c  duplicates.c  dupsup.c  explain.c  filter_badideals.c  filter_badideals.h  filter_common.c  filter_common.h  filter_config.h  filter_galois.c  filter_io.c  filter_io.cpp  filter_io.h  filter_io.tex  filter_matrix.c  filter_matrix.h  filter_memalloc.c  filter_memalloc.h  filter_sm.c  filter_sm.h  filter_utils.c  filter_utils.h  markowitz.c  markowitz.h  merge.c  merge.h  merge_mono.c  merge_mono.h  merge_mpi.c  (+33 more)
filter/out-of-core/: Makefile  clique.c  singleton.c
gf2x/: BUGS  BestToom.c  CMakeLists.txt  COPYING  ChangeLog  HalfGCD.c  Makefile  Makefile.am  Makefile.common.gf2x  Makefile.in  NEWS  README  README.release  TC.h  Toom.c  ToomSpace.c  acinclude.m4  aclocal.m4  bench.c  best_k.sh  check000.exp  check000.in  check001.exp  check001.in  check002.exp  check002.in  check003.exp  check003.in  configure  configure.ac  factor.c  factor.cpp  fft.c  gen_bb_mul_code.c  gf2x.c  gf2x.h  inject-ntl  inject-ntl-5.4.2  mul-basecase.c  mul-gf2x.c  (+32 more)
gf2x-fft/: CMakeLists.txt  fake_fft.c  fake_fft.h  fft_adapter.hpp  gf2x-fft.h
gf2x-fft/cantor/: CMakeLists.txt  cantor128.c  cantor128.h  cantor128.m  (+4 more)
linalg/: CMakeLists-nodist.txt  CMakeLists.txt  Makefile  Makefile.local  README  allsqrt.c  apply_perm.c  apply_perm.cpp  balance.c  bit_matrices.c  bit_matrices.h  blockmatrix.c  blockmatrix.h  bw2cado.c  characters.c  checkdep.c  checkdep2.c  checkrels.c  dclist.c  dclist.h  debug.h  duplicates.c  files.c  files.h  freerel.c  gauss.c  gauss.h  gzip.c  gzip.h  hashpair.c  hashpair.h  linalg.c  markowitz.c  markowitz.h  matops.cpp  matops.h  matprune.c  matsort.c  merge.c  merge.h  (+36 more)
merge/: CMakeLists.txt  Makefile  dclist.c  dclist.h  duplicates.c  files.c  files.h  markowitz.c  markowitz.h  merge.c  merge_mono.c  merge_mono.h  merge_mpi.c  postprocess.c  purge.c  replay.c  sparse.c  sparse_mat.c  sparse_mat.h  swar.c
misc/: CMakeLists-nodist.txt  CMakeLists.txt  Makefile  README  cacheline.c  cachesim.c  check_rels.c  complete_rels.c  contains_zerochar.c  convert_poly.c  convert_rels.c  debug_renumber.c  descent-init.c  descent_init_Fp.c  extra_renumber.c  filter_sieved_pairs.c  fk2cwi.c  get_valid_lines.c  ggnfs2cado.c  phi.c  psi.c  renumber_convert.c  singleton_simple.c  smooth_detect.c  smooth_detect.h  svsm.c
nfs-hd/: CMakeLists.txt  alpha3d.c  alpha3d.h  alpha3d.mag  alpha3d.sage  array.c  array.h  automatic_p6bd40.sh  double_vector.c  double_vector.h  factor_base.c  factor_base.h  functions.c  functions.h  ideal.c  ideal.h  int64_poly.c  int64_poly.h  int64_vector.c  int64_vector.h  list.h  list_double_vector.c  list_double_vector.h  list_int64_vector.c  list_int64_vector.h  list_int64_vector_index.c  list_int64_vector_index.h  makefb.c  makefb.h  mat_Z.c  mat_Z.h  mat_double.c  mat_double.h  mat_int64.c  mat_int64.h  matrix.h  murphyE3d.c  murphyE3d.h  parameters.c  parameters.h  (+26 more)
polyselect/: CMakeLists-nodist.txt  CMakeLists.txt  E.sage  Makefile  MurphyE.sage  README  ROOTSIEVE_TODO  TIMINGS  alpha.c  alpha.mpl  alpha.sage  area.c  area.h  aux.c  aux.h  auxiliary.c  auxiliary.h  debug_rootsieve.sage  debug_rootsieve2.sage  dlpolyselect.c  dlpolyselect.cpp  doit  fast_rootsieve.c  fast_rootsieve.h  gfp2dlpolyselect_notes.txt  gfpkdlpolyselect.c  gfpkdlpolyselect.h  gfpkdlpolyselect_test.c  gnuplot_stuff.sage  higher_order_roots.sage  integral.sage  kleinjung-list-of-lattices.sage  kleinjung.c  kleinjung.sage  kleinjung2a.c  linear_interpolation.sage  makefile_gfpkdl.make  murphyE.c  murphyE.h  play.c  (+63 more)
sieve/: CMakeLists-nodist.txt  CMakeLists.txt  Makefile  Proposal_for_new_fb_file_format  README.checknorms  README.descent  README.fb_format  README.las  README.sieve  basicnt.h  benchsieve.pl  bernstein.c  bucket.c  bucket.cpp  bucket.h  bucket.hpp  c80.poly  c80.roots.txt  c80a.poly  checknorms.c  config.h  config_h.in  display-lattice-adjust.sage  dupsup.c  dupsup.cpp  fake_rels.cpp  fb-slice-weight.cpp  fb-slice-weight.hpp  fb-types.h  fb.c  fb.cpp  fb.h  fb.hpp  fb_new.cpp  fb_new.h  frankesort.pl  freerel.c  freerel_multipoly.c  iqsort.h  las-arith.c  (+128 more)
sqrt/: CMakeLists-nodist.txt  CMakeLists.txt  algsqrt.c  allsqrt.c  checkdep.c  crtalgsqrt.c  finish.mag  fmalgsqrt.c  gmp-hacks.h  knapsack.c  knapsack.h  lift.c  poly.c  poly.h  polyroots.c  polyroots.h  powers_of_p.cpp  powers_of_p.h  ratsqrt.c  sqrt.c
tests/: CMakeLists.txt  README  ncpus.sh  provide-wdir.sh  test_full_p30.sh  test_full_p59.sh  test_gfp2.sh  test_gfp2_2_2.sh  test_gfp2_2_2g.sh  test_gfp3.sh  test_iceildiv.c  test_iter.c  test_iter.h  test_tests_common.c  tests_common.c  tests_common.h
utils/: CMakeLists-nodist.txt  CMakeLists.txt  Makefile  README_POLYNOMIALS  alloc_proxy.h  antebuffer.c  barrier.c  barrier.h  bit_vector.c  bit_vector.h  build-testcases-rootfinder.m  cache.c  cachebuf.h  cachesize.c  cachesize_cpuid.c  cachesize_cpuid.h  cachesize_guess.c  cado-endian.h  cado_poly.c  cado_poly.h  cado_popen.c  cado_popen.h  check_rels.c  complete_rels.c  concatenate_range.hpp  cont_mem.c  cont_mem.h  cputime.c  crc.c  crc.h  cut_n_roots.c  cxx_misc.hpp  cxx_mpz.hpp  discriminant.c  discriminant.h  dllist.h  double_poly.c  double_poly.cpp  double_poly.h  electric_alloc.h  (+178 more)
(+2620 files in other folders)
